force-app/main/default/objects/Fund__c/Fund__c.object-meta.xml
<CustomObject>
    <label>Mutual Fund</label>
    <nameField>
        <label>Mutual Fund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mutual Funds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>