force-app/main/default/objects/Fund__c/fields/Fund_URL__c.field-meta.xml
<CustomField>
    <fullName>Fund_URL__c</fullName>
    <formula>&apos;https://in.investing.com/funds/&apos;  &amp;   Fund_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investing Fund URL</label>
    <type>Text</type>
</CustomField>