force-app/main/default/objects/Fund__c/fields/Investment_Value__c.field-meta.xml
<CustomField>
    <fullName>Investment_Value__c</fullName>
    <formula>Latest_NAV__c *  Total_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investment Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>