force-app/main/default/objects/Fund__c/fields/TER__c.field-meta.xml
<CustomField>
    <fullName>TER__c</fullName>
    <label>TER</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>