force-app/main/default/objects/Fund__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Risk__c</columns>
    <columns>TER__c</columns>
    <columns>Type__c</columns>
    <columns>Fund_Type__c</columns>
    <columns>Total_Invested_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>